# cclock

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  python-publish.yml
docs/: api.rst  conf.py  index.rst  install.rst
src/cclock/: __about__.py  __init__.pxd  __init__.py  clock.c  clock.h  clock.pxd  clock.pyi  conversions.pxd  conversions.pyi  conversions.pyx  rfc2822.pxd  rfc2822.pyi  rfc2822.pyx
tests/: test_cclock.py
